# CG-Mixed-Precision

./: CMakeLists.txt  HACS  Makefile  README.md  autopilot.sh  cg_double.cpp  cg_double_solve.cpp  cg_mixed.cpp  double_solver.cpp  main.cpp  main_cg.cpp  mixed_prec  mixed_solver.cpp  mvtoolbox.h
examples/: CG_Examples.ipynb
include/: CGSolvers.hpp  Laplace.hpp  MatrixOperations.hpp  laplacian.hpp  libmath.hpp  solvers.hpp
openacc/: Makefile  gpu_solver.cpp  openacc  openacc_notes
openmp/: Makefile  axpy.cpp  cg_double.cpp  double_solver.cpp  laplace.cpp  matrix_vector.cpp
serial/: Makefile  axpy.cpp  cg_double.cpp  cg_single.cpp  double_solver.cpp  laplace.cpp  matrix_vector.cpp  mixed_solver.cpp  serial_solvers  vector_addition_dbl_sgl.cpp
src/: CGSolvers.cpp  Laplace.cpp  MatrixOperations.cpp  cg_double.cpp  cg_single.cpp  laplacian.cpp  libmath.cpp  solvers.cpp
